kubernetes/rlajeunesse/deploy-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: rlajeunesse
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: puurl/nginx-reportip:v1
        ports:
        - containerPort: 80
