kubernetes/rlajeunesse/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx
  namespace: rlajeunesse
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - port: 8080
      targetPort: 80
