kubernetes/rlajeunesse/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rlajeunesse
  namespace: rlajeunesse
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "34.69.215.204.xip.io"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: svc-nginx
              port: 
                number: 8080
